--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "server": "nodemon server.js",
     "postinstall": "npm rebuild bcrypt --build-from-source"
   },
+  "engines": {
+    "node" : "14.X"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
