--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "echo No build step necessary'"
   },
   "engines": {
-    "node": "20.X"
+    "node": "20.x"
   },
   "author": "",
   "license": "ISC",
